[package]
name = "blueprint-scm"
version = "0.0.1"
edition = "2021"

[dependencies]
fxhash = "0.2"
nom = "7.1"
thiserror = "1.0"
anyhow = "1.0"
xflags = "0.3"
once_cell = "1.17"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true

[[bin]]
name = "blueprint"
path = "src/main.rs"
