[package]
name = "blueprint-scheme"
version = "0.0.1"
edition = "2021"

[dependencies]
rustc-hash = "1.1"
nom = "7.1"
num = { version = "0.4", default-features = false, features = ["std"] }
quick-error = "2.0"
xflags = "0.3"
once_cell = "1.17"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true
# debug = true

[[bin]]
name = "blueprint"
path = "src/main.rs"
