[package]
name = "blueprint-scheme"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1"
smartstring = "1.0"
nom = "7.1"
num-complex = { version = "0.4", default-features = false }
num-rational = { version = "0.4", default-features = false }
quick-error = "2.0"
xflags = "0.3"
once_cell = "1.18"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = true
strip = true
# debug = true

[[bin]]
name = "blueprint"
path = "src/main.rs"
